add more skelatons

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -3,14 +3,14 @@
 
 בלה בלה בלה
 
-### התקנת הספריה
+## התקנת הספריה
 
 בלה בלה בלה
 
-### ספריות משלימות
+## ספריות משלימות
 
 בלה בלה בלה
 
-### Hello World
+## Hello World
 
 בלה בלה בלה
