--- a/index.Rmd
+++ b/index.Rmd
@@ -9,9 +9,9 @@ site: bookdown::bookdown_site
 
 בלה בלה בלה
 
-### איך לקרוא את הספר
+## איך לקרוא את הספר
 
 בלה בלה בלה
 
-### יצירת קשר
+## יצירת קשר
 
