--- a/index.Rmd
+++ b/index.Rmd
@@ -7,11 +7,23 @@ site: bookdown::bookdown_site
 
 # על הספר
 
-בלה בלה בלה
+הספר הזה נועד ללמד משתמש שיש לו אפס היכרות עם הספריה 
+`ggplot2`
+לשליטה מלאה בה.
+ידע מוקדם שנדרש להבנת תוכן הספר הוא תכנות בסיסי בשפת
+R,
+היכרות עם סוגי המשתנים בשפה, הפקודות הבסיסיות בה, ומניפולציות על טבלאות נתונים. את כל הדברים האלה ניתן ללמוד בדרך קריאה זריזה של הספריםם הקודמים שכתבתי
+
+דגכדגכ כדגכדגכדגכ
 
 ## איך לקרוא את הספר
 
-בלה בלה בלה
+עבור משתמשים שאינם מכירים כלל את הספריה, ממולץ לקרוא את הספר פרק אחר פרק, בשל שיש חשיבות גובהה לסדר, וכך לא תמצאו עצמכם עם ״פינות לא סגורות״ והכל יבנה על יסודות רחבים ומוצקים.
+עבור משתמשים שמכירים כבר את הספריה ויודעים לעבוד איתה - אפשר להשתמש בספר בתוך ״דף נוסחאות מורחב״ שעוזר לרענן את הזיכרון מתי שצריך.
+
+קריאה נעימה.
 
 ## יצירת קשר
 
+במידה ויש נקודה לא בהירה, מצאתם טעות הקלדה, או חוסר דיוק - מוזמים ליצור איתי קשר במייל
+ophir.betser@gmail.com
