--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,7 +1,32 @@
 
 # למה כדאי להשתמש ב ggplot2
 
-בלה בלה בלה
+- חבילה בשלה
+- קהילה גדולה
+- הרבה חבילות תומכות
+- גמישות מאוד גבוהה למשתמש
+
+## התקנת הספריה
+
+כדי להתקין את החבילה הריצו בקונסול של
+R
+את הפקודה הבאה:
+
+```{r eval=FALSE, include=TRUE}
+install.packages("ggplot2")
+```
+
+מעולה! כעת הספריה מותקנת על המחשב שלכם.
+כעת, בכל פעם שתרצו לעשות בה שימוש תהיו חייבים להריץ את הפקודה
+
+```{r}
+library(ggplot2)
+```
+
+אשר תגרום ל
+R
+להבין שאתם מעוניינים לעשות שימוש בפקודות
+`ggplot2`
 
 ## התקנת הספריה
 
@@ -13,4 +38,25 @@
 
 ## Hello World
 
-בלה בלה בלה
+מאוד מפורסם להתחיל מדריכים על שפות תכנות על ידי הדגמא של הדפסת המחרוזת
+"Hello World".
+
+לדעתי יכול להיות נחמד להדגים בניה של גרף פשוט במדריך על גרפים!
+אבל אל תבהלו, כבר בסוף קריאת הפרק הבא תבינו את רוב מה שאדגים עכשיו.
+
+```{r}
+ggplot(iris) +
+  geom_point(
+    aes(
+      x = Sepal.Length,
+      y = Sepal.Width,
+      color = Species,
+      shape = Species
+      )
+    ) +
+  theme_classic() +
+  labs(
+    title = "This is my Plot!"
+    )
+```
+
