--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -28,13 +28,22 @@ R
 להבין שאתם מעוניינים לעשות שימוש בפקודות
 `ggplot2`
 
-## התקנת הספריה
-
-בלה בלה בלה
 
 ## ספריות משלימות
 
-בלה בלה בלה
+`ggplot2`
+ הפכה להיות הספריה הפופאולרית ביותר בשפת 
+ R
+ ליצרית ויזאליזציות. יש מגוון אדיר של סוגי ויזאליזציות שונים. כל תחום בתעשיה או תחום באקדמיה מעלה דרישות יחודיות מהמערכת יצור הגרפים שתשרת את האירגון שלו, והפסריה החלה לתפוח ולהפוך לכבדה יותר. בשלב מסויים הוחלט להמשיך לתחזק רק את הפונקציות הקיימות בספריה, ולהפוך אותם למעולה בהן, ושפונקציות נוספות - יכתבו בספריות אחרות אשר ישלימו תכונות אשר רלוונטיות במקרי שימוש מסויים.
+ 
+ דוגמא לספריות הללו:
+ 
+ - ggeasy
+ - ggforce
+ - ggtext
+ - esquisse
+ - ועוד רבות טובות ואחרות
+
 
 ## Hello World
 
