--- a/02-basic.Rmd
+++ b/02-basic.Rmd
@@ -1,19 +1,42 @@
 
 # תחביר בסיסי
 
-בלה בלה בלה
+ראשי התיבות שמהן מורכב השם 
+״ggplot"
+הוא
+grammar of graphics.
+
+הפילוסופיה שעומדת מאחורי השם המפוצץ היא שניתן לפרק כל ויזאליזציה, מהפשוטה שבינהן למורכבות והמסובכות ביותר - למספר עקרונות משותפים.
+כל גרף מכיל נתונים.
+בכל גרף יש מערכת צירים.
+ובכל גרף יש איזו ״גיאומטריה״ - צורה שבה מציגים את הנתונים.
+קוד
+ggplot
+יכתב בדיוק בצורה הזאת, נצהיר שלב אחר שלב על החלקי הבסיסים שמהם נראה להרכיב את הגרף שלנו, עד שנקבל את צורתו המוגמרת והרצויה.
 
 ## התחביר של גרף
 
 בלה בלה בלה
 
-## נתונים
+### נתונים
 
-בלה בלה בלה
+```{r}
+ggplot(iris)
+```
 
 ## מערכת צירים
 
-בלה בלה בלה
+```{r}
+names(iris)
+```
+
+```{r}
+ggplot(iris) +
+  aes(x = Sepal.Length, y = Sepal.Width)
+```
+
+ggplot(iris)
+
 
 ## גיאומטריה
 
