--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,7 @@ site: bookdown::bookdown_site
 לשליטה מלאה בה.
 ידע מוקדם שנדרש להבנת תוכן הספר הוא תכנות בסיסי בשפת
 R,
-היכרות עם סוגי המשתנים בשפה, הפקודות הבסיסיות בה, ומניפולציות על טבלאות נתונים. את כל הדברים האלה ניתן ללמוד בדרך קריאה זריזה של הספריםם הקודמים שכתבתי
+היכרות עם סוגי המשתנים בשפה, הפקודות הבסיסיות בה, ומניפולציות על טבלאות נתונים. את כל הדברים האלה ניתן ללמוד בדרך קריאה זריזה של הספרים הקודמים שכתבתי
 
 דגכדגכ כדגכדגכדגכ
 
