--- a/02-basic.Rmd
+++ b/02-basic.Rmd
@@ -16,9 +16,25 @@ ggplot
 
 ## התחביר של גרף
 
-בלה בלה בלה
+מעולה! בואו נתחיל ליצור את שלב אחר שלב את הגרף הראשון מתוך רבים שיופיעו בספר הזה!
+הגרף הראשון שלנו יורכב מסט הנתונים
+iris,
+שהוא טבלה שבאה 
+built-in
+בשפת
+R,
+לכן הקוד יעבוד באופן בטוח גם במחשב שלכם, אז תוכלו פשוט להעתיק אותו ולהריץ
 
 ### נתונים
+
+הדבר הראשון שעלינו לעשות כדי לבנות גרף הוא להצהיר שאחנו רוצים לבנות אוביקט 
+ggplot
+עם סט נתונים ספציפי.
+
+הדרף לעשות זאת היא בעזרת הפקודה
+`ggplot(DATA_SET_NAME)`
+והרצה שלה תיצור לנו קנבס ריק שעליו נוכל ״לצייר״ את הנתונים הספציפים שאנחנו נבקש מ
+R
 
 ```{r}
 ggplot(iris)
@@ -26,18 +42,55 @@ ggplot(iris)
 
 ## מערכת צירים
 
+בסט הנתונים שבעזרתו אני מדגים את בניית הגרף הבסיסי יש 150 תצפיות, ו 5 עמודות, שאלו הם שמותיהן:
 ```{r}
 names(iris)
 ```
+
+אני מעוניין שמערכת הצירים שלי תורכב מ
+`Sepal.Length`
+בציר ה
+x,
+ומ - 
+`Sepal.Width`
+בציר ה
+y.
+כדי לומר לגרף שלי לעשות זאת, 
+אני אוסיף לאוביקט ה
+ggplot
+שיצרנו בעזרת הסימן
+`+`
+את הקוד הבא
 
 ```{r}
 ggplot(iris) +
   aes(x = Sepal.Length, y = Sepal.Width)
 ```
 
-ggplot(iris)
-
 
 ## גיאומטריה
 
-בלה בלה בלה
+כעת, אני רוצה להוסיף את התצפיות לגרף שלי - כך שכל תצםית תיוצג על ידי נקודה.
+בשביל לבצע את זה, אוסיף לקוד שכבר כתבנו, אשר מכיל כבר את הנתונים ואת מערכת הצירים את החלק של הגיאומטריה.
+ישנן סוגי גיאומטריות רבות, אבל לעניננו - כדי ליצר גרף פיזור
+אשתמש בגיאומריה שנקראת
+`geom_point`
+
+```{r}
+ggplot(iris) +
+  aes(x = Sepal.Length, y = Sepal.Width) +
+  geom_point()
+```
+
+
+## שילוב חוקי תחביר
+
+בדומה לכך שניתן לבטא את אותה המשמעות של משפט - עם אותן המילים - במספר דרכים שונות, כך ניתן להשתמש בתחביר מעט שונה כדי ליצר את אותו הגרף. לדוגמא, את אותו הגרף ניתן ״להביע״ גם בעזרת הקוד הזה, שבו מערכת הצירים הרצויה מוכרזת בתוך הגיאומטריה המבוקשת.
+
+```{r}
+ggplot(iris) +
+  geom_point(aes(x = Sepal.Length, y = Sepal.Width))
+```
+
+לעיתים לא תהיה לכך משמעות כלל, אך כאשר נוסיף שכבות (לא להיבהל - זה מושג שיובהר בהמשך)
+לגרפים שלנו, שיהפכו אותם למורכבים יותר, תהיה חשיבות למיקום שבו נצהיר על מערכת הצירים שלנו.
