--- a/05-make_plot_beautiful.Rmd
+++ b/05-make_plot_beautiful.Rmd
@@ -54,7 +54,7 @@ my_plot_2 +
 ```{r}
 my_plot_2 +
   theme_classic() +
-  scale_color_brewer(palette = 2)
+  scale_color_brewer(palette = "Set2")
 ```
 
 
